it will set up the html and css for the next step which is calculating triangles. fancy

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,11 @@ h5 {
   display: none;
 }
 
+.result2 {
+  display: none;
+}
+
 .radio label {
   margin-right: 50px;
-  font-weight: bold; 
+  font-weight: bold;
 }
